# conibotti

./: .gitignore  README.md  conibotti.py  dotenv.py  pyproject.toml  requirements.prod.txt  requirements.txt
dotenv/: dotenv.py
src/: app.py
src/api/: get_data.py
src/api/types/: api_types.py
src/conibotti/: .gitignore  LICENSE.md  conibotti.py  requirements.txt  util.py
src/conibotti/api/: api_types.py  decoder.py  get_data.py
src/conibotti/app/: app.py  app_types.py  logger.py
src/conibotti/config/: logging.yml
src/conibotti/data/: conit.fi.json
src/types/: app_types.py
