[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ConiBotti"
dynamic = ["version"]
description = "Discord bot"
readme = "src/conibotti/README.md"
license.file = "src/conibotti/LICENSE.md"
requires-python = ">=3.12"


[tool.hatch.version]
path = "src/conibotti/__version__.py"
